RESOLVED FIXED159023
Crash under GraphicsLayerCA::recursiveCommitChanges() with deep layer trees
https://bugs.webkit.org/show_bug.cgi?id=159023
Summary Crash under GraphicsLayerCA::recursiveCommitChanges() with deep layer trees
Simon Fraser (smfr)
Reported 2016-06-22 09:26:02 PDT
Crash under GraphicsLayerCA::recursiveCommitChanges() with deep layer trees
Attachments
Patch (2.06 KB, patch)
2016-06-22 09:27 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2016-06-22 09:27:55 PDT
Simon Fraser (smfr)
Comment 2 2016-06-22 09:28:26 PDT
Simon Fraser (smfr)
Comment 3 2016-06-22 09:59:01 PDT
Note You need to log in before you can comment on or make changes to this bug.