Crash under GraphicsLayerCA::recursiveCommitChanges() with deep layer trees https://bugs.webkit.org/show_bug.cgi?id=159023 rdar://problem/25377842

Reviewed by Tim Horton.

Having an on-stack DisplayList::Recorder increased the stack frame size significantly,
causing stack exhaustion with deep layer trees, despite the existing depth check.

Make the Recorder heap-allocated to fix this.

Tested by LayoutTests/compositing//layer-creation/deep-tree.html.

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::recursiveCommitChanges):

Canonical link: https://commits.webkit.org/177097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202330 268f45cc-cd09-0410-ab3c-d52691b4dbfc